<resources>
    <string name="app_name">HelloBluetooth</string>
    <string name="bluetooth_unavailable">WARNING: Bluetooth is not available."</string>
    <string name="bluetooth_disabled">WARNING: Bluetooth is disabled."</string>
    <string name="available_devices">Available Devices:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_all">Disconnect All</string>
    <string name="update_terminal_list">Update List</string>
    <string name="discovered_devices">Discovered Devices:</string>
    <string name="start_discovery">Start</string>
    <string name="stop_discovery">Stop</string>
</resources>
