<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="MainActivity">

    <TextView
        android:id="@+id/bluetooth_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="#FF0000"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="Bluetooth is disabled / unavailable."/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_devices"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/paired_device_list"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                style="?android:buttonBarButtonStyle"
                android:id="@+id/connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:enabled="false"/>

            <Button
                style="?android:buttonBarButtonStyle"
                android:id="@+id/disconnect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/disconnect"
                android:enabled="false"/>

        </LinearLayout>

        <LinearLayout
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                style="?android:buttonBarButtonStyle"
                android:id="@+id/update_paired_device_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/update_terminal_list"
                android:enabled="false"/>

            <Button
                style="?android:buttonBarButtonStyle"
                android:id="@+id/disconnect_all_button"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_all"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
