<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".DiscoveryActivity">

    <TextView
        android:id="@+id/bluetooth_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="#FF0000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/discovered_devices"/>

    <ListView
        android:id="@+id/discovery_results_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/start_discovery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_discovery"
            android:enabled="false"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/stop_discovery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/stop_discovery"
            android:enabled="false"/>

    </LinearLayout>

</LinearLayout>
